fix : 피셜피드 랭킹영역 모바일 화면에서 overflow 되지 않도록 수정

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -983,7 +983,7 @@ footer {
 
   .feed-section-two{
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -998,7 +998,6 @@ footer {
     top: 23%;
     background: #fff;
     border-radius: 50%;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
   }
 
   .wrapper .card .content{
@@ -1008,6 +1007,13 @@ footer {
     margin-left: 10rem;
   }
 
+  .card .details{
+    margin: 0;
+    padding: 0;
+    height: 10rem;
+    width: 20rem;
+    overflow: hidden;
+  }
 
   .card a{
     display: none;
